--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             </div>
         </div>
 
+        <footer>© Duarte Matos 2020</footer>
+
         <!-- jquery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
